fix overflow on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
 html, body {
     min-height: 100%;
     max-width: 100%;
+    position: relative;
     overflow-x: hidden;
 }
 body {
